# framework.web.pcre

./: .gitignore  Makefile.am  Makefile.in  control.in  libpcrecpp.pc.in  pcre.manifest  pcre_chartables.c.dist  postinst.in
debian/: changelog  control  copyright  libpcre-dev.install.in  libpcre.install.in  rules
packaging/: pcre.spec
src/: pcre_compile.c  pcretest.c
